# legal-ai-assistant

./: .gitignore  README.md  compose.yaml  example.env
.github/workflows/: deploy-production.yml
backend/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/app/: config.py  main.py  prestart.py
backend/app/legal_agent/: chain.py  structured_output.py
backend/app/legal_agent/prompts/: chat_prompt.txt  cls_prompt.txt  examples_1.json  legal_gen_prompt.txt  queries_gen_prompt.txt  system_prompt_1.txt  system_prompt_2.txt
backend/src/: __init__.py  config.py  main.py
backend/src/legal_agent/: chain.py
docs/: calculate_embeddings.ipynb  codexes.json  create_docs_collection.ipynb  laws.json  preprocessing.ipynb
frontend/: .prettierrc  Dockerfile  README.md  example.env  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.node.json  vite.config.embed.ts
frontend/environments/: tailwindConfigCreator.js
frontend/src/: App.tsx  AppContent.tsx  index.css  main.tsx  store.ts
frontend/src/hooks/: index.ts  (+9 more)
media/: legal_rag.drawio
practices/: calculate_embeddings.ipynb  create_practice_collection.ipynb  init_practice_collection.ipynb
practices/parsing/: download_sudact.py  parse_sudact.py
practices/summarization/: helper.ipynb  summarization.py
rag/: README.md
rag/complex/: rag.ipynb
rag/practices_db_creation/: calculate_embeddings.ipynb  download_sudact.py  init_practice_collection.ipynb  parse_sudact.py  practice_preprocessing.ipynb  practice_summary.py  summary_prompt.txt
rag/simple/: rag.ipynb
(+43 files in other folders)
