[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["arkadiy <cotnikoarkady@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
langserve = {extras = ["all"], version = "^0.3.0"}
langchain = "^0.3.5"
langchain-openai = "^0.2.4"
pydantic-settings = "^2.6.0"
toml = "^0.10.2"
uvicorn = "^0.32.0"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.7"
faiss-cpu = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
